# ssgit

./: Cargo.toml  README.md
src/: consts.rs  entity.rs  handler.rs  index.rs  main.rs  object.rs  parser.rs  tree.rs
src/entity/: head.rs  index.rs  object.rs  refs.rs  tree.rs
src/entity/object/: mode.rs  zip.rs
src/handler/: add.rs  branch.rs  cat_file.rs  commit.rs  commit_tree.rs  hash_object.rs  init.rs  ls_files.rs  switch.rs  update_index.rs  update_ref.rs  write_tree.rs
src/object/: hash.rs  mode.rs  zip.rs
