[package]
name = "ssgit"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
byteorder = "1.5.0"
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive"] }
flate2 = "1.0.28"
sha1 = "0.10.6"
tz = "0.2.1"
